kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgrest-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000
  selector:
    app: postgrest
status:
  loadBalancer: { }
---
apiVersion: v1
kind: Service
metadata:
  name: dxddb-service
spec:
  ports:
    - name: dxddb-service
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: dxdprojects-db
